add DOM elements, init kontakte-array, prevent form submit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Contacts - exercise with JS Objects</title>
+    <title>Projekt Kontakte - JS DOM,  Objects, localstorage, </title>
 </head>
 <body>
     
@@ -13,7 +13,7 @@
         <h1 class="lead">Neuen Kontakt erfassen</h1>
 
         <!-- FORM -->
-        <form class="form" id="from">
+        <form class="form" id="form">
             <label for="firstname">Vorname</label>
             <input type="text" name="firstname" id="firstnameId" placeholder="Vorname eintragen">
             <small>Fehlermeldung</small>
