add populate list

--- a/index.html
+++ b/index.html
@@ -41,8 +41,26 @@
     
             <button>Neuen Kontakt hinzufügen</button>    
         </form>
+        
+        <!-- OUTPUT -->
+        <div class="kontakte">
+            <h2>Meine Kontakte</h2>
+            <input type="text" id="suche" placeholder="Suche Kontakt">
+
+            <ul id="liste" class="kontakt-liste">
+                <!-- <li>
+                    <div class="kontakt-info">
+                        <h4>Soardo</h4>
+                        <p>Mario</p>
+                        <p>+491774253459</p>
+                        <p>mario@s.de</p>
+                    </div>
+                </li> -->
+            </ul>
+        </div>
 
     </div>
+
    
     <script src="js/script.js"></script>
 </body>
